Login & Register functionally Added

--- a/src/Assets/sass/admin/_admin.scss
+++ b/src/Assets/sass/admin/_admin.scss
@@ -17,6 +17,7 @@
         padding: 20px;
         border: 0;
         box-shadow: 0 5px 40px 10px $shadow;
+        background-color: $white;
         .heading_tab {
             margin-bottom: 20px;
             .heading {
