--- a/src/Assets/sass/responsive.scss
+++ b/src/Assets/sass/responsive.scss
@@ -8,7 +8,7 @@
   .services-section .service-block h3 a {
     font-size: 20px;
   }
-  // dashborad
+  // dashboard
   .login-details .post-section .card {
     padding: 0 50px;
   }
@@ -18,7 +18,7 @@
     padding-top: 250px;
     padding-bottom: 0;
   }
-  #dashborad {
+  #dashboard {
     .right_section .dheader {
       margin-bottom: 130px;
     }
@@ -99,7 +99,7 @@
   .left-section .goback {
     margin-bottom: 20px;
   }
-  #dashborad {
+  #dashboard {
     #sidebar {
       width: 80px;
       .pro-sidebar-inner {
@@ -217,11 +217,11 @@
     height: 250px !important;
   }
 
-  // dashborad
+  // dashboard
   .login-details .post-section .card {
     padding: 0 20px;
   }
-  #dashborad {
+  #dashboard {
     #sidebar {
       width: 80px;
       .pro-sidebar-inner {
@@ -377,12 +377,12 @@
       margin-bottom: 20px;
     }
   }
-  // dashborad
+  // dashboard
 
   .login-details .post-section .card {
     padding: 0 10px;
   }
-  #dashborad {
+  #dashboard {
     .dheader .profile_info .dropdown .dropdown-menu {
       left: -170px;
       margin: 0;
