--- a/src/Assets/sass/abstracts/_animation.scss
+++ b/src/Assets/sass/abstracts/_animation.scss
@@ -81,3 +81,16 @@
     transform: rotate(360deg);
   }
 }
+@keyframes loader {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 0;
+  }
+}
